[package]
authors = [ "Brian Merchant", ]
description = "Proc macro for format_args!/format! like functionality for ANSI related generics."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "procr_ansi_format"
version = "0.1.0"
repository = "https://github.com/bzm3r/procr_ansi_term"


[lib]
proc-macro = true

[dependencies]
prettyplease = "0.2.12"
proc-macro2 = { version = "1" }
quote = "1"
regex = "1.10.0"
syn = { version = "2", features = ["full"]}
ra-ap-rustc_index = "0.14.0"
ra-ap-rustc_lexer = "0.14.0"
rand = "0.8.5"
